--- a/public/404.html
+++ b/public/404.html
@@ -36,6 +36,15 @@
 
 
 
+
+<div hidden id="snipcart" data-api-key="NjM0YmQ0MTYtZGU3NC00ZDM4LThhOTYtYjFkNmFhNzcxZmNiNjM2OTkzOTk5MzkzNDQ0MzY5"></div>
+
+    <a href="#" class="snipcart-checkout" style="text-decoration: none;">
+      <div class="snipcart-summary">
+        <img src="/img/cart.svg" alt="">
+        <span class="snipcart-total-price"></span>
+      </div>
+    </a>
 </head>
 <body>
   <div id="all">
