--- a/public/portfolio/rohmerslight/index.html
+++ b/public/portfolio/rohmerslight/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Name of the work 2</title>
+<title>Rohmer&#39;s light</title>
 <meta name="description" content="Studio réalité">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
@@ -36,6 +36,15 @@
 
 
 
+
+<div hidden id="snipcart" data-api-key="NjM0YmQ0MTYtZGU3NC00ZDM4LThhOTYtYjFkNmFhNzcxZmNiNjM2OTkzOTk5MzkzNDQ0MzY5"></div>
+
+    <a href="#" class="snipcart-checkout" style="text-decoration: none;">
+      <div class="snipcart-summary">
+        <img src="/img/cart.svg" alt="">
+        <span class="snipcart-total-price"></span>
+      </div>
+    </a>
 </head>
 <body>
   <div id="all">
@@ -101,7 +110,7 @@
   <div class="row">
     <div class="col-lg-8">
       <div class="content-column-content">
-         <h1>Name of the work 2</h1>
+         <h1>Rohmer&#39;s light</h1>
          
          <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
 
