--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="http://guizcarl.freeboxos.fr:8887/css/font-awesome.min.css">
 <link rel="stylesheet" href="http://guizcarl.freeboxos.fr:8887/css/owl.carousel.css">
 <link rel="stylesheet" href="http://guizcarl.freeboxos.fr:8887/css/owl.theme.css">
-<link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.1/default/snipcart.css" />
+<link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.2/default/snipcart.css"/>
 
 
 
@@ -42,11 +42,12 @@
 
 
 <div hidden id="snipcart" data-api-key="NjM0YmQ0MTYtZGU3NC00ZDM4LThhOTYtYjFkNmFhNzcxZmNiNjM2OTkzOTk5MzkzNDQ0MzY5"></div>
-
-    <a href="#" class="snipcart-checkout" style="text-decoration: none;">
+  
+    <a href="#" class="snipcart-checkout cartlogo" style="text-decoration: none;">
+      <img id="cartsvg" src="/img/cart.svg" alt="cart">
       <div class="snipcart-summary">
-        <img src="/img/cart.svg" alt="">
         <span class="snipcart-total-price"></span>
+        
       </div>
     </a>
 </head>
@@ -183,7 +184,7 @@
 <script src="http://guizcarl.freeboxos.fr:8887/js/imagesloaded.pkgd.min.js"></script>
 <script src="http://guizcarl.freeboxos.fr:8887/js/owl.carousel.min.js"></script>
 <script src="http://guizcarl.freeboxos.fr:8887/js/front.js"></script>
-<script src="https://cdn.snipcart.com/themes/v3.0.1/default/snipcart.js"></script>
+<script src="https://cdn.snipcart.com/themes/v3.0.2/default/snipcart.js"></script>
 <script>
 $(document).ready(function(){
   $('#typewriteText').typewrite({
