--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -155,7 +155,7 @@
                           <div class="box-masonry-description">
                             <p>
                                 
-                                  Photography book
+                                  a book of photography
                                 
                             </p>
                           </div>
