--- a/public/portfolio/black-robe/index.html
+++ b/public/portfolio/black-robe/index.html
@@ -158,6 +158,7 @@
                   data-item-name="Black robe"
                   data-item-price="83.52"
                   data-item-url="https://studiorealite.github.io/website/portfolio/blackrobe/"
+                  data-item-image="img/portfolio/Joseph_Plateau.jpg"
                   data-item-description="Beautiful black robe">
                   Add to cart
                   </button>
