--- a/public/portfolio/pasterne/index.html
+++ b/public/portfolio/pasterne/index.html
@@ -176,7 +176,7 @@
                   data-item-name="Pas terne"
                   data-item-price="19.98"
                   data-item-url="https://studiorealite.github.io/website/portfolio/pasterne/"
-                  data-item-image="img/portfolio/74612968_454499511866405_3245622896285974528_n.jpg"
+                  data-item-image="https://studiorealite.github.io/website/img/portfolio/74612968_454499511866405_3245622896285974528_n.jpg"
                   data-item-description="Art photography book. Abstract art photography book by Guillaume Bouzige.">
                   Add to cart
                   </button>
