--- a/public/portfolio/rohmerslight/index.html
+++ b/public/portfolio/rohmerslight/index.html
@@ -162,7 +162,7 @@
                   data-item-name="Rohmer&#39;s light"
                   data-item-price="650"
                   data-item-url="https://studiorealite.github.io/website/portfolio/rohmerslight/"
-                  data-item-image="img/portfolio/rhomer_light_2.jpg"
+                  data-item-image="https://studiorealite.github.io/website/img/portfolio/rhomer_light_2.jpg"
                   data-item-description="Oil painting enlighten by a background light">
                   Add to cart
                   </button>
