--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -88,12 +88,12 @@
   
   
   
-  <a href="full%20profile%20url%20in%20instagram" title="" class="external instagram">
+  <a href="https://www.instagram.com/realitestudio/" title="" class="external instagram">
     <i class="fa fa-instagram"></i>
   </a>
   
   
-  <a href="mailto:hello@studior%c3%a9alit%c3%a9.com" data-animate-hover="pulse" class="email">
+  <a href="mailto:hello@xn--studioralit-hbbe.com" data-animate-hover="pulse" class="email">
     <i class="fa fa-envelope"></i>
   </a>
   
@@ -143,12 +143,12 @@
   
   
   
-  <a href="full%20profile%20url%20in%20instagram" title="" class="instagram">
+  <a href="https://www.instagram.com/realitestudio/" title="" class="instagram">
     <i class="fa fa-instagram"></i>
   </a>
   
   
-  <a href="mailto:hello@studior%c3%a9alit%c3%a9.com" class="email">
+  <a href="mailto:hello@xn--studioralit-hbbe.com" class="email">
     <i class="fa fa-envelope"></i>
   </a>
   
